대화 기능 추가 시작
대화 기능 추가 시작

--- a/src/main/resources/templates/chat/chatroomdetail.html
+++ b/src/main/resources/templates/chat/chatroomdetail.html
@@ -7,17 +7,65 @@
 </head>
 
 <body>
-    <h1>{{chatRoomDto.roomName}}</h1>
-    <form method="post" action="">
-        <label for="writer">대화명</label><input type="text" minlength="1" id="writer" name="writer" value="{{writer}}" readonly />
+<h1>{{chatRoomDto.roomName}}</h1>
+<fieldset>
+<label for="writer">대화명</label><input type="text" minlength="1" id="writer" name="writer" value="{{writer}}" readonly />
         <label for="message">메세지</label><input type="text" minlength="1" id="message" name="message" />
-        <input type="submit" value="대화 전송">
-    </form>
-    <ul>
-        <li>채팅 내용</li>
-        {{#chatMessageDtoList}}
-        <li>{{writer}} : {{message}}</li>
-        {{/chatMessageDtoList}}
+        <button onclick="$.sendMessage();">대화 전송</button>
+        <button onclick="$.outRoom();">대화방 나가기</button>
+    </fieldset>
+    <h3>채팅 내용</h3>
+    <ul id="msgUl">
     </ul>
 </body>
 </html>
+
+<script>
+    let chatUrl = "ws://192.168.0.10:8077/ws/chat";
+    let webSocket = new WebSocket(chatUrl);
+
+    webSocket.onopen = function (param) {
+        let message = $("#message").val();
+        let writer = $("#writer").val();
+        let chatMessageDto = {
+            "msgType": "ENTER"
+            , "roomId": "{{chatRoomDto.roomId}}"
+            , "writer": writer
+            , "message": ""
+        };
+        webSocket.send(JSON.stringify(chatMessageDto));
+    }
+
+    webSocket.onmessage = function (param) {
+        console.log(param.data);
+        let msgUl = $("#msgUl");
+        let liHtml = `<li>${param.data}</li>`;
+        msgUl.append(liHtml);
+    }
+
+    $.sendMessage = () => {
+        let message = $("#message").val();
+        let writer = $("#writer").val();
+        let chatMessageDto = {
+            "msgType": "MESSAGE"
+            , "roomId": "{{chatRoomDto.roomId}}"
+            , "writer": writer
+            , "message": message
+        };
+        webSocket.send(JSON.stringify(chatMessageDto));
+    }
+
+    $.outRoom = () => {
+        let message = $("#message").val();
+        let writer = $("#writer").val();
+        let chatMessageDto = {
+            "msgType": "OUT"
+            , "roomId": "{{chatRoomDto.roomId}}"
+            , "writer": writer
+            , "message": ""
+        };
+        webSocket.send(JSON.stringify(chatMessageDto));
+        webSocket.close();
+        document.location.href = "/chat/list";
+    }
+</script>
