방 나갈 때도 누가 나갔다는 알림 뜨게 함
방 나갈 때도 누가 나갔다는 알림 뜨게 함

--- a/src/main/resources/templates/chat/chatroomdetail.html
+++ b/src/main/resources/templates/chat/chatroomdetail.html
@@ -50,7 +50,7 @@
             "msgType": "MESSAGE"
             , "roomId": "{{chatRoomDto.roomId}}"
             , "writer": writer
-            , "message": writer + ":" + message
+            , "message": writer + ": " + message
         };
         webSocket.send(JSON.stringify(chatMessageDto));
     }
@@ -62,7 +62,7 @@
             "msgType": "OUT"
             , "roomId": "{{chatRoomDto.roomId}}"
             , "writer": writer
-            , "message": ""
+            , "message": writer + "님이 나갔습니다."
         };
         webSocket.send(JSON.stringify(chatMessageDto));
         webSocket.close();
