--- a/src/main/resources/templates/chat/chatroomlist.html
+++ b/src/main/resources/templates/chat/chatroomlist.html
@@ -13,24 +13,37 @@
 
     $.enterChatRoom = (roomId) => {
         let writer = prompt('대화명을 입력하세요');
+        if (writer == null || writer == undefined || writer === '' || writer.length < 6) {
+            return;
+        }
         let url = `/chat/enter?roomId=${roomId}&writer=${writer}`;   // GET ? 와 &
         // let url = `/chat/enter/${roomId}/${writer}`;    // GET 주소
         document.location.href = url;
     }
 
-    function enterChatRoom() {
-
+    function checkValid() {
+        let roomName = $("#roomName").val();
+        let writer = $("#writer").val();
+        if (roomName === '' || roomName.length < 6) {
+            alert("대화방 이름을 6자 이상 입력하세요")
+            return false;
+        } else if (writer === '' || writer.length < 6) {
+            alert("대화명 이름을 6자 이상 입력하세요")
+            return false;
+        }
+        return true;
     }
 </script>
 <body>
-    <form method="post" action="/chat/create">
+    <form method="post" action="/chat/create" onsubmit="return checkValid();">
         <label for="roomName">대화방 이름</label><input type="text" minlength="6" id="roomName" name="roomName" />
+        <label for="writer">대화명</label><input type="text" minlength="6" id="writer" name="writer" />
         <input type="submit" value="채팅방 생성">
     </form>
     <ul>
         <li>채팅방 제목</li>
         {{#chatRoomList}}
-        <li onclick="$.enterChatRoom('{{roomId}}');">{{roomId}} : {{roomName}}</li>
+        <li onclick="$.enterChatRoom('{{roomId}}');">{{roomId}} : {{roomName}} ({{count}})</li>
         {{/chatRoomList}}
     </ul>
 </body>
